Avoid overlapping the central button block with the zoom buttons (skin.css)
20% - calculated approximately.
A precise calculation will take additional resources (since our buttons are scalable) and there is no need for a precise calculation yet.

--- a/web/skins/classic/css/base/skin.css
+++ b/web/skins/classic/css/base/skin.css
@@ -1144,7 +1144,7 @@ html::-webkit-scrollbar-thumb, div::-webkit-scrollbar-thumb, nav::-webkit-scroll
 .block-button-center {
   display: inline-block;
   position: relative;
-  margin: 0 auto;
+  margin: 0 20%;
   top: 2px;
   z-index: 10;
 }
